# playbooks

./: .gitignore  Makefile  README.md  cluster.yml  provision.yml  pyproject.toml
environments/production/: cluster  provision
environments/production/group_vars/: all.yml  servers.yml
roles/common/tasks/: install.yml  main.yml  network.yml
roles/k8s/defaults/: main.yml
roles/k8s/tasks/: crio.yml  helm.yml  install.yml  kubernetes.yml  network.yml
roles/metrics-server/tasks/: main.yml
roles/nfs/tasks/: main.yml
roles/openebs/defaults/: main.yml
roles/openebs/tasks/: deploy.yml  install.yml
roles/prometheus/defaults/: main.yml  values.yml
roles/prometheus/tasks/: deploy.yml  install.yml
roles/traefik/defaults/: main.yml
roles/traefik/tasks/: deploy.yml  install.yml  main.yml  persistence.yml
roles/users/tasks/: zsh.yml
