[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "playbooks"
version = "0.1.0"
description = "Collection of Ansible playbooks for microservices"
authors = ["Kirill Sumorokov"]

[tool.poetry.dependencies]
ansible = "^4.5.0"
ansible-lint = "^5.1.3"
ansible-modules-hashivault = "^4.6.4"
jinja2 = "^2.11.1"
passlib = "^1.7.2"
psycopg2-binary = "^2.8.4"
python = "^3.10"
pyyaml = "^5.3.1"
